--- a/app/src/main/res/layout/activity_focus_group.xml
+++ b/app/src/main/res/layout/activity_focus_group.xml
@@ -512,6 +512,16 @@
                     android:layout_margin="10dp"
                     android:onClick="fGetLocationDetails"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Details"
+                    android:id="@+id/username"
+                    android:layout_margin="10dp"
+                    android:layout_gravity="center"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
