--- a/app/src/main/res/layout/activity_house_hold.xml
+++ b/app/src/main/res/layout/activity_house_hold.xml
@@ -1323,6 +1323,16 @@
                     android:layout_margin="10dp"
                     android:onClick="GetLocationDetails"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Details"
+                    android:id="@+id/usernameH"
+                    android:layout_margin="10dp"
+                    android:layout_gravity="center"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
